<resources>
    <string name="app_name">Shoe Store</string>
    <string name="password_label">Password</string>
    <string name="Email_label">Email</string>
    <string name="create_new_login_Button">Register</string>
    <string name="Login_Button">Login</string>
    <string name="password_hint">Enter your password</string>
    <string name="email_hint">Enter Your email</string>
    <string name="Welcome_text">Welcome</string>
    <string name="second_welcome_text">To continue press the instructions button</string>
    <string name="welcome_button">Instructions</string>
    <string name="istructions_text">* This is a shoe store app which you can view and buy shoes , And even add ones .</string>
    <string name="istruction_text2">* You can go to the list of shoes by pressing the button below .</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_button">Shoe List</string>
    <string name="OR_text">OR</string>
    <string name="Shoe_name">Shoe name</string>
    <string name="Company_name">Company</string>
    <string name="Shoe_size">Shoe Size</string>
    <string name="Description">Description</string>
    <string name="Cancel_button">Cancel</string>
    <string name="Save_button">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_menu">Logout</string>
    <string name="shoe_name">Shoe name :</string>
    <string name="shoe_size">Shoe Size :</string>
    <string name="company">Company :</string>
    <string name="description">Description :</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="hint_shoe_name">enter shoe name</string>
    <string name="hint_shoe_size">enter size</string>
    <string name="hint_company_name">enter company</string>
    <string name="hint_description">enter description</string>
    <string name="add_shoe_button">add shoe button</string>
    <string name="welcome_in_the_shoe_app_where_you_can_view_shoes_detail_s_and_add_ones">Welcome in the Shoe App where you can view shoes detail\'s and add ones</string>
</resources>