<?xml version="1.0" encoding="utf-8"?>
<!--   using Linear Layout because we are using small text views & navigate you to the shoe list  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <TextView
        android:id="@+id/instructions_title"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/dela_gothic_one"
        android:singleLine="false"
        android:text="@string/instructions_title"
        android:textSize="29sp"
        android:textStyle="italic" />

    <TextView

        android:id="@+id/instructions_text"
        style="@style/Text_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/alice"
        android:text="@string/istructions_text"
        android:textColor="#0E0201"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/instructions2_text"
        style="@style/Text_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/istruction_text2"
        android:textColor="#120504"
        android:textSize="25sp" />

    <Button
        android:id="@+id/welcome_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="50dp"
        android:backgroundTint="#58852B"
        android:text="@string/instructions_button" />
</LinearLayout>
</layout>