<?xml version="1.0" encoding="utf-8"?>
<!--   Login page which navigate you the welcome page -->
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/Login_Layout">


        <TextView
            android:id="@+id/email_label"
            style="@style/Text_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/Email_label"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.965" />

        <TextView
            android:id="@+id/password_label"
            style="@style/Text_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="12dp"
            android:text="@string/password_label"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_label"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="212dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.544"
            app:layout_constraintStart_toEndOf="@+id/email_label"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toEndOf="@+id/password_label"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            app:layout_constraintVertical_bias="0.0"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/Login_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#36CC3C"
            android:text="@string/Login_Button"
            android:textColor="#37474F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/Or_Text"
            style="@style/Text_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OR_text"
            app:layout_constraintBottom_toTopOf="@+id/CreateNewLogin_Button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Login_Button" />

        <Button
            android:id="@+id/CreateNewLogin_Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/create_new_login_Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/Login_Button"
            app:layout_constraintStart_toStartOf="@+id/Login_Button"
            app:layout_constraintTop_toBottomOf="@+id/Login_Button" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            android:layout_marginStart="170dp"
            android:layout_marginTop="97dp"
            android:layout_marginEnd="184dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/shoe_store"
            android:fontFamily="@font/dela_gothic_one"
            android:textStyle="italic"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>