<?xml version="1.0" encoding="utf-8"?>
<!--   Welcome page which navigate to the instruction page -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">


    <TextView
        android:id="@+id/instructions_title"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/dela_gothic_one"
        android:singleLine="false"
        android:text="@string/Welcome_text"
        android:textSize="29sp"
        android:textStyle="italic" />

    <TextView

        android:id="@+id/instructions_text"
        style="@style/Text_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/alice"
        android:text="@string/welcome_in_the_shoe_app_where_you_can_view_shoes_detail_s_and_add_ones"
        android:textColor="#F84F912C"
        android:textSize="25sp" />

    <Button
        android:id="@+id/welcome_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="50dp"
        android:backgroundTint="#507024"
        android:text="@string/welcome_button" />
</LinearLayout>
</layout>